--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "node-starter",
   "private": true,
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pdf-lib": "^1.17.1",
+    "exceljs": "^4.4.0",
+    "clamdjs": "^1.0.2"
   }
 }
