--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "pdf-lib": "^1.17.1",
     "exceljs": "^4.4.0",
-    "clamdjs": "^1.0.2"
+    "clamdjs": "^1.0.2",
+    "aws-sdk": "2.1498.0"
   }
 }
